# keria

./: .eslintrc  .gitignore  .jsdoc.json  .prettierignore  .prettierrc  Dockerfile  LICENSE  MAINTAINERS.md  MIGRATION_TO_UV.md  Makefile  README.md  changelog.md  codecov.yaml  docker-compose.yaml  eslint.config.mjs  jest.config.ts  mypy.ini  package-lock.json  package.json  pyproject.toml  ruff.toml  setup.py  tsconfig.build.json  tsconfig.json  tsconfig.node.json  version.sh  vitest.config.ts  vitest.workspace.ts
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: main.yml  publish-keria.yml  publish-npm.yml  publish.yml  python-app-ci.yml  python-formatting.yml  signify-ci.yml  update-documentation.yml
config/: keria.json
config/witness-demo/: wan.json  wes.json  wil.json  wit.json  wub.json  wyz.json
docs/: Makefile  README.rst  conf.py  index.html  index.rst  keria_app.rst  keria_core.rst  keria_db.rst  keria_end.rst  keria_notifications.md  modules.html  protocol.md  requirements.txt
docs/assets/: search.js
docs/classes/: Agent.html  Authenticater.html  BexCodex.html  CesrNumber.html  Challenges.html  Cigar.html  Cipher.html  Client.html  Codex.html  Contacts.html  Controller.html  Counter.html  CounterCodex.html  Creatory.html  CredentialTypes.html  Credentials.html  Decrypter.html  Diger.html  DigiCodex.html  EmptyMaterialError.html  Encrypter.html  Escrows.html  GroupKeeper.html  Hab.html  Habery.html  Identifier.html  IndexedBothSigCodex.html  IndexedCurrentSigCodex.html  IndexedSigCodex.html  Indexer.html  IndexerCodex.html  Inputage.html  KeyEvents.html  KeyManager.html  KeyStates.html  Manager.html  Matter.html  MatterCodex.html  NonTransCodex.html  Notifications.html  (+25 more)
docs/enums/: Algos.html  Ident.html  Ids.html  Serials.html  Tier.html
docs/functions/: arrayEquals.html  b.html  b64ToInt.html  bytesToInt.html  concat.html  d.html  desiginput.html  designature.html  deversify.html  dumps.html  extractValues.html  incept.html  intToB64.html  intToB64b.html  intToBytes.html  interact.html  messagize.html  normalize.html  nowUTC.html  openManager.html  pad.html  parseRangeHeaders.html  randomNonce.html  randomPasscode.html  range.html  readInt.html  ready.html  reply.html  riKey.html  rotate.html  siginput.html  signature.html  sizeify.html  versify.html
docs/interfaces/: CounterArgs.html  CreateIdentiferArgs.html  Creator.html  CredentialFilter.html  Dict.html  HaberyArgs.html  InceptArgs.html  IndexerArgs.html  KeyStore.html  MakeHabArgs.html  (+6 more)
images/: keria.dockerfile
scripts/: generate-types.js  keria.json
src/: buffer-polyfill.ts  exports.ts  index.ts  math.ts  ready.ts
test-integration/: challenge.test.ts  externalModule.test.ts  multisig-holder.test.ts  multisig-inception.test.ts  multisig-join.test.ts  multisig-vlei-issuance.test.ts  randy.test.ts  witness.test.ts
tests/: __init__.py  conftest.py  test_init.py  test_main.py
types/: index.d.ts
(+317 files in other folders)
